syntax = "proto3";

package org.eigengo.rsa.identity.v100;

message IdentifyFace {
    int32 version = 1;
    int64 ingestionTimestamp = 2;
    string correlationId = 3;
    string hanlde = 4;
    bytes rgbBitmap = 5;
}
